# code-club

./: .gitignore  .nojekyll  404.html  404.qmd  README.html  README.md  _quarto.yml  creating_functions.R  creating_functions.js  creating_functions.py  glossary.html  glossary.qmd  index.html  index.qmd  pyproject.toml  resources.qmd  robots.txt  schedule.html  schedule.qmd  schedule.quarto_ipynb  search.json  sitemap.xml  styles.css
.github/workflows/: preview.yml  publish.yml
2023-03-09-intro-to-functions/: README.md  creating_functions.R  creating_functions.js  creating_functions.py
2023-04-13-intro-to-git/: README.md
2023-04-13-intro-to-heuristic-evaluation/: README.md
2023-06-15-callbacks/: callbacks.html
2023-07-20-recursive-programming/: README.md  javascript_example.js  python_example.py  r_example.R
_site/: about.html  schedule.html  search.json
data/: glossary.csv  schedule.csv
docs/: 404.html  CNAME  glossary.html  index.html  resources.html  schedule.html  search.json
docs/docs/: schedule.html
docs/resources/: ncf.html
intermediate-skills-sessions/: intermediate_skills_schedule.html  intermediate_skills_schedule.qmd
intermediate-skills-sessions/16-git-github/: index.html  index.qmd
intermediate-skills-sessions/17-quarto-intro/: index.html  index.ipynb  index.qmd  slides.qmd
intermediate-skills-sessions/18-webscraping-apis/: fingertips_py.ipynb  fingertips_py.qmd  index.html  index.ipynb  index.qmd
resources/: glossary.html  glossary.qmd  intro-to-open-source-slides.qmd  ncf.html  ncf.qmd
sessions/: schedule.html  schedule.qmd
(+1268 files in other folders)
