[project]
name = "code_club_webpage"
version = "0.1.0"
description = "Code Club Webpage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "great-tables>=0.17.0",

    "jinja2>=3.1.6",

    "jupyterlab>=4.3.5",

    "matplotlib>=3.10.1",

    "numpy>=2.2.3",

    "pandas>=2.2.3",

    "polars>=1.25.2",

    "pyyaml>=6.0.2",

    "quarto>=0.1.0",

    "rsconnect-python>=1.25.2",

    "scipy>=1.15.2",

    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
